--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
                         <li>three</li>
                     </ul>
             </ul>
-        
+        <br>
+        <li>Job Title</li>
+            <ul>
+                <li>Company</li>
+                <li>Date Range</li>
+                <li>Responsibilities</li>
+                    <ul>
+                        <li>one</li>
+                        <li>two</li>
+                        <li>three</li>
+                    </ul>
+            </ul>
     </ul>
     <footer style="background-color: black; color: white;">
         <h3>
