--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
 </head>
@@ -14,7 +14,7 @@
     </header>
 
     <h1 style="text-align: center;">Aaron Hawke</h1>
-    <img src="./Images/HeadshotForCV.jpg" alt="Headshot Photo of Aaron Hawke. Very attractive" height="200">
+    <img src="./Images/HeadshotForCV.jpg" alt="Headshot Photo of Aaron Hawke. Very attractive" height="200" class="Profile-Picture">
     <h4 style="text-align: center;">
         hawkegamedesign@gmail.com <br>
         +447395 537373
