--- a/About.html
+++ b/About.html
@@ -11,5 +11,80 @@
             About Me 
         </h2>
     </header>
+
+    <hr>
+    <h2><u>Summary</u></h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet risus ac felis pellentesque condimentum et et urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean a sem elementum, lobortis lacus a, varius tellus. Duis scelerisque magna non metus lacinia, ut elementum tellus tempor. Sed lectus urna, finibus a gravida a, gravida efficitur elit. Etiam non erat fermentum, egestas ipsum eget, porta tellus. Nullam vitae diam quis libero dapibus dapibus. Sed at leo ut dui facilisis porta vel et augue. Nam bibendum condimentum lacus a rhoncus. Pellentesque accumsan justo eu lorem feugiat gravida. Nulla fermentum est vitae nulla rhoncus efficitur. Nulla facilisi. Aenean feugiat lorem quis metus elementum fringilla. Integer quis nisi ornare, mollis neque sit amet, semper purus.
+    </p>
+    <hr>
+    <h2><u>Education</u></h2>
+    <p>
+        <ol>
+            <li>Bournemouth University</li>
+                <ul>
+                    <li>BSc Game Design (2:1)</li>
+                </ul>
+                <br>
+            <li>Poole and Bournemouth College</li>
+                <ul>
+                    <li>BTEC Lv 3 Extended Diploma in Music Technology (MMP)</li>
+                </ul>
+                <br>
+            <li>King's College Taunton</li>
+                <ul>
+                    <li>11 GCSEs</li>
+                    <ul>
+                        <li>3 As (Maths, Physics, Biology)</li>
+                        <li>3 Bs (Chemistry, Music, Sports Science)</li>
+                        <li>5 Cs (English Literature, English Language, German, Design and Technology, Religous Studies)</li>
+                    </ul>
+                </ul>
+        </ol>
+    </p>
+    <hr>
+    <h2><u>Skills</u></h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet risus ac felis pellentesque condimentum et et urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean a sem elementum, lobortis lacus a, varius tellus. Duis scelerisque magna non metus lacinia, ut elementum tellus tempor. Sed lectus urna, finibus a gravida a, gravida efficitur elit. Etiam non erat fermentum, egestas ipsum eget, porta tellus. Nullam vitae diam quis libero dapibus dapibus. Sed at leo ut dui facilisis porta vel et augue. Nam bibendum condimentum lacus a rhoncus. Pellentesque accumsan justo eu lorem feugiat gravida. Nulla fermentum est vitae nulla rhoncus efficitur. Nulla facilisi. Aenean feugiat lorem quis metus elementum fringilla. Integer quis nisi ornare, mollis neque sit amet, semper purus.
+    </p>
+    <hr>
+    <h2><u>Work Experience</u></h2>
+    <ul>
+        <li>Job Title</li>
+            <ul>
+                <li>Company</li>
+                <li>Date Range</li>
+                <li>Responsibilities</li>
+                    <ul>
+                        <li>one</li>
+                        <li>two</li>
+                        <li>three</li>
+                    </ul>
+            </ul>
+        <br>
+        <li>Job Title</li>
+            <ul>
+                <li>Company</li>
+                <li>Date Range</li>
+                <li>Responsibilities</li>
+                    <ul>
+                        <li>one</li>
+                        <li>two</li>
+                        <li>three</li>
+                    </ul>
+            </ul>
+        <br>
+        <li>Job Title</li>
+            <ul>
+                <li>Company</li>
+                <li>Date Range</li>
+                <li>Responsibilities</li>
+                    <ul>
+                        <li>one</li>
+                        <li>two</li>
+                        <li>three</li>
+                    </ul>
+            </ul>
+    </ul>
 </body>
 </html>
